# EosRucioPlugin

./: CMakeLists.txt  README.md  eosrucioplugin.spec
cmake/: FindXRootD.cmake  Findcurl.cmake
config/: xrd.cf.rucio.example
etc/: CMakeLists.txt  xrd.cf.fed.example
src/: CMakeLists.txt  EosRucioCms.cc  EosRucioCms.hh  EosRucioOfs.cc  EosRucioOfs.hh
